test/functions/bradc/intents/intents-strings.error4.good
intents-strings.chpl:42: In function 'hoo':
intents-strings.chpl:45: error: illegal lvalue in assignment
